@@ -1,3 +1,4 @@
+* Add button to update customer
 * Warn when changing credential
 
 Version 7.2.0 - 2024-04-29
